@@ -1,8 +1,3 @@
-// ERXEOControlUtilities.java
-// Project ERExtensions
-//
-// Created by max on Wed Oct 09 2002
-//
 package er.extensions.eof;
 
 import java.util.Enumeration;
@@ -64,7 +59,6 @@ import er.extensions.eof.ERXEOAccessUtilities.DatabaseContextOperation;
 import er.extensions.foundation.ERXArrayUtilities;
 import er.extensions.foundation.ERXDictionaryUtilities;
 import er.extensions.foundation.ERXKeyValueCodingUtilities;
-import er.extensions.foundation.ERXProperties;
 import er.extensions.jdbc.ERXSQLHelper;
 import er.extensions.validation.ERXValidationException;
 import er.extensions.validation.ERXValidationFactory;
@@ -86,6 +80,7 @@ public class ERXEOControlUtilities {
      * in {@link com.webobjects.eoaccess.EOUtilities EOUtilities}
      * except it will use the localInstanceOfObject
      * method from this utilities class which has a few enhancements.
+     * @param <T> data type of enterprise objects
      *
      * @param ec editing context to pull local object copies
      * @param eos array of enterprise objects
@@ -107,12 +102,12 @@ public class ERXEOControlUtilities {
      * Simple utility method that will convert an array
      * of enterprise objects into an EOArrayDataSource.<br/>
      * <br/>
-     * Note that the datasource that is constructed uses the
+     * Note that the data source that is constructed uses the
      * class description and editing context of the first object
      * of the array.
      * @param array collection of objects to be turned into a
-     *		datasource
-     * @return an array datasource corresponding to the array
+     *		data source
+     * @return an array data source corresponding to the array
      *		of objects passed in.
      */
     public static EOArrayDataSource dataSourceForArray(NSArray<? extends EOEnterpriseObject> array) {
@@ -127,16 +122,16 @@ public class ERXEOControlUtilities {
 
     /**
      * Simple utility method that will convert an array
-     * of enterprise objects into an EOArrayDataSource.<br/>
-     * <br/>
-     * Note that the datasource that is constructed uses the
+     * of enterprise objects into an EOArrayDataSource.
+     * <p>
+     * Note that the data source that is constructed uses the
      * class description and editing context of the first object
      * of the array.
-     * @param ec
-     * @param entityName 
+     * @param ec editing context for the data source
+     * @param entityName entity name
      * @param array collection of objects to be turned into a
-     *		datasource
-     * @return an array datasource corresponding to the array
+     *		data source
+     * @return an array data source corresponding to the array
      *		of objects passed in.
      */
     public static EOArrayDataSource dataSourceForArray(EOEditingContext ec, String entityName, NSArray array) {
@@ -148,7 +143,7 @@ public class ERXEOControlUtilities {
     }
 
     /**
-     * Converts a datasource into an array.
+     * Converts a data source into an array.
      * @param dataSource data source to be converted
      * @return array of objects that the data source represents
      */
@@ -158,10 +153,10 @@ public class ERXEOControlUtilities {
 
     /**
      * Creates a detail data source for a given enterprise
-     * object and a relationship key. These types of datasources
+     * object and a relationship key. These types of data sources
      * can be very handy when you are displaying a list of objects
      * a la D2W style and then some objects are added or removed
-     * from the relationship. If an array datasource were used
+     * from the relationship. If an array data source were used
      * then the list would not reflect the changes made, however
      * the detail data source will reflect changes made to the
      * relationship.<br/>
@@ -181,6 +176,7 @@ public class ERXEOControlUtilities {
     /** 
      * Creates a new, editable instance of the supplied object. Takes into account if the object is
      * newly inserted, lives in a shared context and can either create a peer or nested context.
+     * @param <T> data type of the enterprise object
      *
      * @param eo object for the new instance
      * @param createNestedContext true, if we should create a nested context (otherwise we create a peer context)
@@ -196,12 +192,6 @@ public class ERXEOControlUtilities {
      	if(ec == null) throw new IllegalArgumentException("EO must live in an EC");
      	
         boolean isNewObject = ERXEOControlUtilities.isNewObject(eo);
-        
-        // Check for old EOF bug and do nothing as we can't localInstance
-        // anything here
-        if (ERXProperties.webObjectsVersionAsDouble() < 5.21d && isNewObject) {
-            return eo;
-        }
 
         T localObject = eo;
         
@@ -236,9 +226,10 @@ public class ERXEOControlUtilities {
      * method of first checking if the editingcontexts are
      * equal before creating a fault for the object in the
      * editing context.
+     * @param <T> data type of the enterprise object
      * @param ec editing context to get a local instance of the object in
      * @param eo object to get a local copy of
-     * @return enterprise object local to the passed in editing contex
+     * @return enterprise object local to the passed in editing context
      */
 	public static <T extends EOEnterpriseObject> T localInstanceOfObject(EOEditingContext ec, T eo) {
         return eo != null && ec != null && eo.editingContext() != null && !ec.equals(eo.editingContext()) ?
@@ -271,7 +262,7 @@ public class ERXEOControlUtilities {
             }
         }
         
-        return result;        
+        return result;
     }
     
     /**
@@ -280,6 +271,7 @@ public class ERXEOControlUtilities {
      * of the entity to create the enterprise object.
      * The object is then inserted into the editing context
      * and returned.
+     * @param <T> data type of the enterprise object
      * @param ec editingContext to insert the created object into
      * @param eoClass class of the enterprise object to be created
      * @return created and inserted enterprise object of type T
@@ -339,7 +331,7 @@ public class ERXEOControlUtilities {
      * <br/>
      * will create an instance of Bar, set all of the key-value pairs
      * from the dictValues dictionary, insert it into an editing context
-     * and then add it to both sides of the realtionship "toBars" off of
+     * and then add it to both sides of the relationship "toBars" off of
      * the enterprise object foo.
      *
      * @param editingContext editing context to create the object in
@@ -411,14 +403,13 @@ public class ERXEOControlUtilities {
 	}
 
     /**
-     * Clears snapshot the relaationship of a given enterprise so it will be read again when next accessed.
+     * Clears snapshot the relationship of a given enterprise so it will be read again when next accessed.
      * @param eo enterprise object
      * @param relationshipName relationship name
      */
     public static void clearSnapshotForRelationshipNamed(EOEnterpriseObject eo, String relationshipName) {
         EOEditingContext ec = eo.editingContext();
         EOModel model = EOUtilities.entityForObject(ec, eo).model();
-        EOGlobalID gid = ec.globalIDForObject(eo);
         EODatabaseContext dbc = EODatabaseContext.registeredDatabaseContextForModel(model, ec);
         EODatabase database = dbc.database();
         ERXEOControlUtilities.clearSnapshotForRelationshipNamedInDatabase(eo, relationshipName, database);
@@ -428,6 +419,7 @@ public class ERXEOControlUtilities {
      * Clears snapshot the relationship of a given enterprise so it will be read again when next accessed.
      * @param eo enterprise object
      * @param relationshipName relationship name
+     * @param database database object
      */
     public static void clearSnapshotForRelationshipNamedInDatabase(EOEnterpriseObject eo, String relationshipName, EODatabase database) {
         EOEditingContext ec = eo.editingContext();
@@ -464,7 +456,7 @@ public class ERXEOControlUtilities {
      * keys for a given qualifier.
      * @param ec editing context, only used to determine the entity
      * @param entityName name of the entity, only used to determine the entity
-     * @param eoqualifier to construct the fetch spec with
+     * @param eoqualifier to construct the fetch specification with
      * @param sortOrderings array of sort orderings to sort the result set with.
      * @param additionalKeys array of additional key paths to construct the
      *		raw rows key paths to fetch.
@@ -519,7 +511,7 @@ public class ERXEOControlUtilities {
      * @param primaryKeyValue primary key value. Compound primary keys are given as NSDictionaries.
      * @param prefetchingKeyPaths key paths to fetch off of the eo
      * @return enterprise object matching the given value
-     */    
+     */
     public static EOEnterpriseObject objectWithPrimaryKeyValue(EOEditingContext ec,
                                                                String entityName,
                                                                Object primaryKeyValue,
@@ -537,10 +529,10 @@ public class ERXEOControlUtilities {
      * @param primaryKeyValue primary key value. Compound primary keys are given as NSDictionaries.
      * @param prefetchingKeyPaths key paths to fetch off of the eo
      * @param refreshRefetchedObjects if true, the object will be refetched and refreshed
-     * @return enterprise object matching the given value or null if none is foudn
+     * @return enterprise object matching the given value or null if none is found
      * @throws IllegalStateException if the entity has a compound key and only one key is provided or 
      * if more than one object is found matching the value.
-     */    
+     */
     @SuppressWarnings("unchecked")
 	public static EOEnterpriseObject objectWithPrimaryKeyValue(EOEditingContext ec,
                                                                String entityName,
@@ -560,11 +552,11 @@ public class ERXEOControlUtilities {
      * @param prefetchingKeyPaths key paths to prefetch for the eo
      * @param refreshRefetchedObjects if true, the object will be refetched and refreshed
      * @param throwIfMissing if true, an exception is thrown for a missing object
-     * @return enterprise object matching the given value or null if none is foudn
+     * @return enterprise object matching the given value or null if none is found
      * @throws IllegalStateException if the entity has a compound key and only one key is provided or 
      * if more than one object is found matching the value.
      * @throws EOObjectNotAvailableException if throwIfMissing is true and the object is missing
-     */    
+     */
     @SuppressWarnings("unchecked")
     public static EOEnterpriseObject objectWithPrimaryKeyValue(EOEditingContext ec,
                                                                String entityName,
@@ -578,8 +570,7 @@ public class ERXEOControlUtilities {
             if (entity.primaryKeyAttributes().count() != 1) {
                 throw new IllegalStateException("The entity '" + entity.name() + "' has a compound primary key and cannot be used with a single primary key value.");
             }
-            values = new NSDictionary<String, Object>(primaryKeyValue,
-                               ((EOAttribute)entity.primaryKeyAttributes().lastObject()).name());
+            values = new NSDictionary<String, Object>(primaryKeyValue, entity.primaryKeyAttributeNames().lastObject());
         }
         NSArray eos;
         if (prefetchingKeyPaths == null && !refreshRefetchedObjects) {
@@ -616,11 +607,12 @@ public class ERXEOControlUtilities {
      * Returns an {@link com.webobjects.foundation.NSArray NSArray} containing the objects from the resulting rows starting
      * at start and stopping at end using a custom SQL, derived from the SQL
      * which the {@link com.webobjects.eocontrol.EOFetchSpecification EOFetchSpecification} would use normally {@link com.webobjects.eocontrol.EOFetchSpecification#setHints(NSDictionary) setHints()}
+     * @param <T> data type of the enterprise objects
      *
-     * @param ec editingcontext to fetch objects into
+     * @param ec editing context to fetch objects into
      * @param spec fetch specification for the fetch
-     * @param start
-     * @param end
+     * @param start the starting row number
+     * @param end the last row number
      *
      * @return objects in the given range
      */
@@ -632,11 +624,12 @@ public class ERXEOControlUtilities {
      * Returns an {@link com.webobjects.foundation.NSArray NSArray} containing the objects from the resulting rows starting
      * at start and stopping at end using a custom SQL, derived from the SQL
      * which the {@link com.webobjects.eocontrol.EOFetchSpecification EOFetchSpecification} would use normally {@link com.webobjects.eocontrol.EOFetchSpecification#setHints(NSDictionary) setHints()}
+     * @param <T> data type of the enterprise objects
      *
-     * @param ec editingcontext to fetch objects into
+     * @param ec editing context to fetch objects into
      * @param spec fetch specification for the fetch
-     * @param start
-     * @param end
+     * @param start the starting row number
+     * @param end the last row number
      * @param rawRowsForCustomQueries if true, raw rows will be returned from the fetch when there is a custom query
      *
      * @return objects in the given range
@@ -691,24 +684,29 @@ public class ERXEOControlUtilities {
 		}
 		return result;
 	}
+    
     /**
      * Returns an {@link com.webobjects.foundation.NSArray NSArray} containing the primary keys from the resulting rows starting
-     * at start and stopping at end using a custom SQL, derived from the SQL
+     * at <i>start</i> and stopping at <i>end</i> using a custom SQL, derived from the SQL
      * which the {@link com.webobjects.eocontrol.EOFetchSpecification EOFetchSpecification} would use normally {@link com.webobjects.eocontrol.EOFetchSpecification#setHints(NSDictionary) setHints()}
      *
-     * @param ec editingcontext to fetch objects into
+     * @param ec editing context to fetch objects into
      * @param spec fetch specification for the fetch
-     * @param start
-     * @param end
+     * @param start the starting row number
+     * @param end the last row number
      *
      * @return primary keys in the given range
      */
-    public static NSArray primaryKeyValuesInRange(EOEditingContext ec, EOFetchSpecification spec, int start, int end) {
+    public static NSArray<NSDictionary<String, Object>> primaryKeyValuesInRange(EOEditingContext ec, EOFetchSpecification spec, int start, int end) {
         EOEntity entity = ERXEOAccessUtilities.entityNamed(ec, spec.entityName());
-        NSArray pkNames = (NSArray) entity.primaryKeyAttributes().valueForKey("name");
-        spec.setFetchesRawRows(true);
-        spec.setRawRowKeyPaths(pkNames);
-    	EOFetchSpecification clonedFetchSpec = (EOFetchSpecification)spec.clone();
+        NSArray<String> pkNames = entity.primaryKeyAttributeNames();
+        EOFetchSpecification clonedFetchSpec = (EOFetchSpecification)spec.clone();
+        clonedFetchSpec.setFetchesRawRows(true);
+        clonedFetchSpec.setRawRowKeyPaths(pkNames);
+        if (clonedFetchSpec instanceof ERXFetchSpecification) {
+            // remove any range setting as we will explicitly set start and end limit
+            ((ERXFetchSpecification)clonedFetchSpec).setFetchRange(null);
+        }
         EOSQLExpression sql = ERXEOAccessUtilities.sqlExpressionForFetchSpecification(ec, clonedFetchSpec, start, end);
         NSDictionary<String, EOSQLExpression> hints = new NSDictionary<String, EOSQLExpression>(sql, EODatabaseContext.CustomQueryExpressionHintKey);
         clonedFetchSpec.setHints(hints);
@@ -718,7 +716,7 @@ public class ERXEOControlUtilities {
     /**
      * Returns the number of objects matching the given
      * qualifier for a given entity name. Implementation
-     * wise this method will generate the correct sql to only
+     * wise this method will generate the correct SQL to only
      * perform a count, i.e. all of the objects wouldn't be
      * pulled into memory.
      * @param ec editing context to use for the count qualification
@@ -734,7 +732,7 @@ public class ERXEOControlUtilities {
     /**
      * Returns the number of unique objects matching the given
      * qualifier for a given entity name. This method will generate
-     * the correct sql to perform a count and not to fetch the objects.
+     * the correct SQL to perform a count and not to fetch the objects.
      *
      * @param ec editing context to use for the count qualification
      * @param entityName name of the entity to fetch
@@ -887,8 +885,7 @@ public class ERXEOControlUtilities {
     
     private static Object __aggregateFunctionWithQualifierAndAggregateAttribute(EODatabaseContext databaseContext, EOEditingContext ec, String entityName, EOQualifier qualifier, EOAttribute aggregateAttribute) {
         EOEntity entity = ERXEOAccessUtilities.entityNamed(ec, entityName);
-        EOModel model = entity.model();
-        
+
         EOSQLExpressionFactory sqlFactory = databaseContext.adaptorContext().adaptor().expressionFactory();
         EOQualifier schemaBasedQualifier = entity.schemaBasedQualifier(qualifier);
         EOFetchSpecification fetchSpec = new EOFetchSpecification(entity.name(), schemaBasedQualifier, null);
@@ -939,8 +936,10 @@ public class ERXEOControlUtilities {
      * @param entityName name of the entity
      * @param attributeName attribute for the function to be performed on
      * @param function name, ie MAX, MIN, AVG, etc.
+     * @param fetchSpecificationName name of a fetch specification
+     * @param bindings bindings for the fetch specification
      *
-     * @return aggregate result of the fuction call
+     * @return aggregate result of the function call
      */
     public static Number aggregateFunctionWithQualifier(EOEditingContext ec,
                                                         String entityName,
@@ -964,7 +963,7 @@ public class ERXEOControlUtilities {
      * @param attributeName attribute for the function to be performed on
      * @param function name, ie MAX, MIN, AVG, etc.
      * @param qualifier to restrict data set
-     * @return aggregate result of the fuction call
+     * @return aggregate result of the function call
      */
     public static Number aggregateFunctionWithQualifier(EOEditingContext ec,
             String entityName,
@@ -1021,7 +1020,7 @@ public class ERXEOControlUtilities {
 
     /**
      * Finds an object  in the shared editing context matching a key
-     * and value. This has the benifit of not requiring a database
+     * and value. This has the benefit of not requiring a database
      * round trip if the entity is shared.
      * @param entityName name of the shared entity
      * @param key to match against
@@ -1038,7 +1037,7 @@ public class ERXEOControlUtilities {
 
     /**
      * Finds objects in the shared editing context matching a key
-     * and value. This has the benifit of not requiring a database
+     * and value. This has the benefit of not requiring a database
      * round trip if the entity is shared.
      * @param entityName name of the shared entity
      * @param key to match against
@@ -1085,7 +1084,7 @@ public class ERXEOControlUtilities {
      * Fetches a shared enterprise object for a given fetch
      * specification from the default shared editing context.
      *
-     * @param fetch specification on the shared object
+     * @param fetchSpec specification on the shared object
      * @param entityName name of the shared entity
      * @return the shared enterprise object fetch by the fetch spec named.
      */
@@ -1097,7 +1096,7 @@ public class ERXEOControlUtilities {
      * Fetches a shared enterprise object from the default shared editing context
      * given the name of a fetch specification.
      *
-     * @param fetchSpec name of the fetch specification on the shared object.
+     * @param fetchSpecName name of the fetch specification on the shared object.
      * @param entityName name of the shared entity
      * @return the shared enterprise object fetch by the fetch spec named.
      */
@@ -1196,9 +1195,10 @@ public class ERXEOControlUtilities {
 
     /**
      * Utility method to generate a new primary key for an object. Calls
-     * {@link #newPrimaryKeyForObjectFromClassProperties(EOEnterpriseObject)} and if that returns null,
+     * {@link #newPrimaryKeyDictionaryForObjectFromClassProperties(EOEnterpriseObject)} and if that returns null,
      * {@link #newPrimaryKeyDictionaryForEntityNamed(EOEditingContext, String)}
-     * @return new primary key dictionary or null if a failure occured.
+     * @param eo enterprise object to create keys for
+     * @return new primary key dictionary or null if a failure occurred.
      */
     public static NSDictionary<String, Object> newPrimaryKeyDictionaryForObject(EOEnterpriseObject eo) {
         NSDictionary<String, Object> dict = newPrimaryKeyDictionaryForObjectFromClassProperties(eo);
@@ -1285,7 +1285,7 @@ public class ERXEOControlUtilities {
 
     /**
      * Returns the propertylist-encoded string representation of the global ID.
-     * @param gid the global id of the oject to get the primary key for.
+     * @param gid the global id of the object to get the primary key for.
      * @return string representation of the primary key of the object.
      */
     public static String primaryKeyStringForGlobalID(EOKeyGlobalID gid) {
@@ -1325,18 +1325,18 @@ public class ERXEOControlUtilities {
         }
         
         if(string.trim().length()==0) {
-            return (NSDictionary<String, Object>)NSDictionary.EmptyDictionary;
+            return NSDictionary.EmptyDictionary;
         }
         
         EOEntity entity = ERXEOAccessUtilities.entityNamed(ec, entityName);
-        NSArray pks = entity.primaryKeyAttributes();
+        NSArray<EOAttribute> pks = entity.primaryKeyAttributes();
         NSMutableDictionary<String, Object> pk = new NSMutableDictionary<String, Object>();
         try {
             Object rawValue = NSPropertyListSerialization.propertyListFromString(string);
             if(rawValue instanceof NSArray) {
                 int index = 0;
                 for(Enumeration e = ((NSArray)rawValue).objectEnumerator(); e.hasMoreElements();) {
-                    EOAttribute attribute = (EOAttribute)pks.objectAtIndex(index++);
+                    EOAttribute attribute = pks.objectAtIndex(index++);
                     Object value = e.nextElement();
                     if(attribute.adaptorValueType() == EOAttribute.AdaptorDateType && !(value instanceof NSTimestamp)) {
                         value = new NSTimestampFormatter("%Y-%m-%d %H:%M:%S %Z").parseObject((String)value);
@@ -1355,7 +1355,7 @@ public class ERXEOControlUtilities {
                 	
             		rawValue = new NSData((NSMutableData)rawValue);
             	}
-                EOAttribute attribute = (EOAttribute)pks.objectAtIndex(0);
+                EOAttribute attribute = pks.objectAtIndex(0);
                 Object value = rawValue;
                 value = attribute.validateValue(value);
                 pk.setObjectForKey(value, attribute.name());
@@ -1418,7 +1418,7 @@ public class ERXEOControlUtilities {
      * Calls <code>objectsWithQualifierFormat(ec, entityName, qualifierFormat, args, prefetchKeyPaths, includeNewObjects, false)</code>.
      * 
      * That is, passes false for <code>includeNewObjectsInParentEditingContexts</code>.  This method exists
-     * to maintain API compatability.
+     * to maintain API compatibility.
      */
     public static NSArray objectsWithQualifierFormat(EOEditingContext ec,
                                                      String entityName,
@@ -1457,7 +1457,7 @@ public class ERXEOControlUtilities {
      * Calls objectsWithQualifier(ec, entityName, qualifier, prefetchKeyPaths, includeNewObjects, false).
      *
      * That is, passes false for <code>includeNewObjectsInParentEditingContexts</code>.  This method
-     * exists to maintain API compatability.
+     * exists to maintain API compatibility.
      */
     public static NSArray objectsWithQualifier(EOEditingContext ec,
                                                String entityName,
@@ -1497,7 +1497,7 @@ public class ERXEOControlUtilities {
     
     /**
      * Utility method used to fetch an array of objects given a qualifier. Also
-     * has support for filtering the newly inserted, updateed, and deleted objects in the 
+     * has support for filtering the newly inserted, updated, and deleted objects in the 
      * passed editing context or any parent editing contexts as well as specifying prefetching 
      * key paths.  Note that only NEW objects are supported in parent editing contexts.
      * 
@@ -1600,7 +1600,7 @@ public class ERXEOControlUtilities {
     	if (isDeep) {
     		EOModelGroup modelGroup = ERXEOAccessUtilities.modelGroup(editingContext);
     		EOEntity rootEntity = modelGroup.entityNamed(entityName);
-    		for (EOEntity subEntity : (NSArray<EOEntity>)rootEntity.subEntities()) {
+    		for (EOEntity subEntity : rootEntity.subEntities()) {
     			entityNames.addObject(subEntity.name());
     		}
     	}
@@ -1754,6 +1754,7 @@ public class ERXEOControlUtilities {
      * @param editingContext the editing context to look in
      * @param entityNames the names of the entity to look for
      * @param qualifier the qualifier to restrict by
+     * @return array of filtered inserted objects
      */
     public static NSMutableArray insertedObjects(EOEditingContext editingContext, NSArray<String> entityNames, EOQualifier qualifier) {
       NSMutableArray result = new NSMutableArray();
@@ -1777,6 +1778,7 @@ public class ERXEOControlUtilities {
      * @param editingContext the editing context to look in
      * @param entityNames the names of the entity to look for
      * @param qualifier the qualifier to restrict by
+     * @return array of filtered updated objects
      */
     public static NSMutableArray updatedObjects(EOEditingContext editingContext, NSArray<String> entityNames, EOQualifier qualifier) {
       NSMutableArray result = new NSMutableArray();
@@ -1818,7 +1820,7 @@ public class ERXEOControlUtilities {
     }
 
     /** Faults every EO in the qualifiers into the specified editingContext. This is important for 
-     * in memory filtering and eo comparision.
+     * in memory filtering and eo comparison.
      * @param ec
      * @param q
      */
@@ -2055,26 +2057,33 @@ public class ERXEOControlUtilities {
     }
 
     /**
-     * Trims all values from string attributes from the given EO.
-     * @param object
+     * Trims all values from string attributes from the given EO unless the EO itself
+     * or the string attribute is flagged as read-only.
+     * 
+     * @param object the EO whose string attributes should be trimmed
      */
     public static void trimSpaces(EOEnterpriseObject object) {
+        EOEntity entity = EOUtilities.entityForObject(object.editingContext(), object);
+        if (entity.isReadOnly()) {
+            return;
+        }
         for (Enumeration e=ERXEOControlUtilities.stringAttributeListForEntityNamed(object.editingContext(), object.entityName()).objectEnumerator(); e.hasMoreElements();) {
             String key=(String)e.nextElement();
             String value=(String)object.storedValueForKey(key);
-            if (value!=null) {
+            if (value != null && !entity.attributeNamed(key).isReadOnly()) {
                 String trimmedValue=value.trim();
                 if (trimmedValue.length()!=value.length())
                     object.takeStoredValueForKey(trimmedValue,key);
             }
         }
     }
-    
+
     /**
      * Convenience to get the destination entity name from a key path of an object.
      * Returns null if no destination found.
-     * @param eo
-     * @param keyPath
+     * @param eo an enterprise object
+     * @param keyPath key path
+     * @return entity name or null
      */
    public static String destinationEntityNameForKeyPath(EOEnterpriseObject eo, String keyPath) {
 	   EOEntity entity = ERXEOAccessUtilities.entityForEo(eo);
@@ -2104,7 +2113,7 @@ public class ERXEOControlUtilities {
    
    /**
 	 * Creates an OR qualifier with the given selector for all the given key
-	 * paths and all the given serach terms. If you want LIKE matches, you need
+	 * paths and all the given search terms. If you want LIKE matches, you need
 	 * to the add "*" yourself.
 	 * 
 	 * @param keyPaths
@@ -2124,8 +2133,9 @@ public class ERXEOControlUtilities {
    /**
     * Joins the given qualifiers with an AND. One or both arguments may be null,
     * if both are null, null is returned.
-    * @param q1
-    * @param q2
+    * @param q1 first qualifier
+    * @param q2 second qualifier
+    * @return combined qualifier
     */
    public static EOQualifier andQualifier(EOQualifier q1, EOQualifier q2) {
 	   if(q1 == null) {
@@ -2141,8 +2151,9 @@ public class ERXEOControlUtilities {
    /**
     * Joins the given qualifiers with an OR. One or both arguments may be null,
     * if both are null, null is returned.
-    * @param q1
-    * @param q2
+    * @param q1 first qualifier
+    * @param q2 second qualifier
+    * @return combined qualifier
     */
    public static EOQualifier orQualifier(EOQualifier q1, EOQualifier q2) {
 	   if(q1 == null) {
@@ -2360,7 +2371,7 @@ public class ERXEOControlUtilities {
 	 *            an arbitrary number of keyPaths to validate.
 	 * 
 	 * @param restrictingQualifier
-	 *            an optional resticting qualifier to exclude certain objects
+	 *            an optional restricting qualifier to exclude certain objects
 	 *            from the check
 	 * 
 	 * @param entityName
@@ -2420,7 +2431,7 @@ public class ERXEOControlUtilities {
 	 * @param eo
 	 *            the {@link EOEnterpriseObject} to validate
 	 * @param restrictingQualifier
-	 *            an optional resticting qualifier to exclude certain objects
+	 *            an optional restricting qualifier to exclude certain objects
 	 *            from the check
 	 * @param keys
 	 *            an arbitrary number of keyPaths to validate.
@@ -2506,7 +2517,7 @@ public class ERXEOControlUtilities {
 				String entityName = kgid.entityName();
 				Integer count = counts.objectForKey(entityName);
 				if(count == null) {
-					count = new Integer(0);
+					count = Integer.valueOf(0);
 					counts.setObjectForKey(count, entityName);
 				}
 				counts.setObjectForKey(count+1, entityName);
@@ -2552,7 +2563,7 @@ public class ERXEOControlUtilities {
 	 */
 	private static void ensureSortOrdering(EOEditingContext ec, NSArray<? extends EOGlobalID> gids, NSMutableArray<? extends EOEnterpriseObject> objects) {
 		for (int i = 0; i < objects.size(); i++) {
-			EOEnterpriseObject object = (EOEnterpriseObject) objects.objectAtIndex(i);
+			EOEnterpriseObject object = objects.objectAtIndex(i);
 
 			EOGlobalID gid = gids.objectAtIndex(i);
 
@@ -2561,7 +2572,7 @@ public class ERXEOControlUtilities {
 			}
 
 			for (int j = i + 1; j < objects.size(); j++) {
-				if (gid.equals(ec.globalIDForObject((EOEnterpriseObject) objects.objectAtIndex(j)))) {
+				if (gid.equals(ec.globalIDForObject(objects.objectAtIndex(j)))) {
 					ERXArrayUtilities.swapObjectsAtIndexesInArray(objects, i, j);
 
 					break;
